# space-invaders

./: .gitignore  CMakeLists.txt  Makefile  README.md  board.cpp  board.h  compile.sh  main  main.cpp
Config/: Constants.hpp
Controller/: main.cpp
Model/: Alien.cpp  Alien.hpp  Entity.cpp  Entity.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp
View/: board.cpp  board.hpp
